# wrighter-plugins

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI.yml
wrighter_plugins/: __init__.py  json_scraper.py  network_logger.py  page_timeout.py  resource_blocker.py  stealth_async.py  stealth_sync.py  sync_stealth.py
