[project]
name = "wrighter-plugins"
version = "0.0.2"
description = "Plugins for Wrighter"
authors = [{ name = "Žiga Ivanšek", email = "ziga.ivansek@gmail.com" }]
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Testing",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

keywords = [
  "wrighter",
  "plugins",
  "wrighter plugins",
  "playwright plugins",
  "web scraping",
  "browser automation plugins",
  "JSON scraper",
  "resource blocker",
  "playwright stealth",
]

dependencies = [
  "wrighter==0.1.2",
  "stdl>=0.4.3",
  "jsonschema==4.17.3",
  "jsonpath-ng==1.5.3",
  "playwright>=1.29.0",
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["black", "pytest", "flake8"]

[project.urls]
Repository = "https://github.com/zigai/wrighter-plugins"

[tool.black]
line-length = 100
target_version = ['py310']

[tool.ruff]
line-length = 100
extend-ignore = ["E731", "E741", "N802", "N803", "N806", "E501"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
